# deeplook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_PLAN.md  Dockerfile  README.md  deeplook-complete-technical-spec.md  deeplook-metrics-framework.md  deeplook-report-design-guide.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0f0cc75591ac_purge_stored_messages.py  2a4f9e1b3d7c_add_whatsapp_connections.py  a1b2c3d4e5f6_add_plan_expires_at_to_clients.py  a3c7f1d2e8b5_add_token_split_columns.py  b3c5e8f1a2d4_add_notifications.py  b3f5c7d9e1a2_add_metrics_to_conversation_analysis.py  c1e5f8a2b3d7_add_clerk_user_id_to_clients.py  c7f9b3d8e2a4_add_ack_and_operational_metrics.py  d4e8f2a1c9b6_add_is_business_account_to_connections.py  d9f3b7e2c4a8_add_first_rt_and_hourly_data.py  e4a6f2c8d1b9_add_plan_started_at_to_clients.py  (+15 more)
analytics/: README.md  churn.sql  growth.sql  product_usage.sql  revenue.sql  trial_codes.sql
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/auth/: clerk.py  (+1 more)
data_example/: Chat de WhatsApp con +57 300 6009686.txt  Chat de WhatsApp con +57 300 7078903.txt  Chat de WhatsApp con +57 310 2184379.txt  Chat de WhatsApp con +57 310 2399960.txt  Chat de WhatsApp con +57 310 5583286.txt  Chat de WhatsApp con +57 310 6958482.txt  Chat de WhatsApp con +57 311 5116323.txt  Chat de WhatsApp con +57 311 8688519.txt
scripts/: debug_chat_fetch.py  gen_trial_codes.py  generate_demo_report.py  generate_sample_report.py  regen_pdfs.py  seed_demo_analysis.py
tests/: conftest.py
(+122 files in other folders)
