[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplook"
version = "1.0.0"
description = "WhatsApp Conversation Analytics Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "matplotlib>=3.8.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyJWT[crypto]>=2.8.0",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/delivery/reports/templates/*"]
